lots of writing

--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -92,3 +92,11 @@
     pages = {5--53}
 }
 
+@misc{wiki:lorem,
+   author = "Wikipedia",
+   title = "Lorem ipsum --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2013",
+   url = "http://en.wikipedia.org/wiki/Lorem_ipsum",
+   note = "[Online; accessed 03-June-2013]"
+ }
+
