bugfix useritem time

--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -16,11 +16,14 @@
 }
 
 @ARTICLE{schulz2002,
-  author = {Schulz, Klaus and Mihov, Stoyan},
-  title = {Fast string correction with Levenshtein automata},
-  journal = {International Journal on Document Analysis and Recognition},
-  year = {2002}
+    author = {Klaus Schulz and Stoyan Mihov},
+    title = {Fast String Correction with Levenshtein-Automata},
+    journal = {INTERNATIONAL JOURNAL OF DOCUMENT ANALYSIS AND RECOGNITION},
+    year = {2002},
+    volume = {5},
+    pages = {67--85}
 }
+
 @Book{automata2003,
   title = {{Introduction to automata theory, languages, and computation}},
   publisher = {Pearson/Addison-Wesley},
@@ -99,4 +102,126 @@
    url = "http://en.wikipedia.org/wiki/Lorem_ipsum",
    note = "[Online; accessed 03-June-2013]"
  }
+
+@misc{benchmark2010,
+  title = {Benchmarking triple stores with biological data},
+  author = {Mironov, Vladimir and Seethappan, Nirmala and Blondé, Ward and Antezana, Erick and Lindi, Bjørn and Kuiper, Martin},
+  year = {2010}
+}
+
+@inproceedings{codeBenchmark,
+title = {Loop Recognition in C++/Java/Go/Scala},
+author  = {Robert Hundt},
+year  = 2011,
+URL = {https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf},
+booktitle = {Proceedings of Scala Days 2011}
+}
+
+@INPROCEEDINGS{Nichols98implicitrating,
+    author = {David M. Nichols},
+    title = {Implicit rating and filtering},
+    booktitle = {In Proceedings of the Fifth DELOS Workshop on Filtering and Collaborative Filtering},
+    year = {1998},
+    pages = {31--36}
+}
+
+@inproceedings{Liu:2010:PNR:1719970.1719976,
+ author = {Liu, Jiahui and Dolan, Peter and Pedersen, Elin R{\o}nby},
+ title = {Personalized news recommendation based on click behavior},
+ booktitle = {Proceedings of the 15th international conference on Intelligent user interfaces},
+ series = {IUI '10},
+ year = {2010},
+ isbn = {978-1-60558-515-4},
+ location = {Hong Kong, China},
+ pages = {31--40},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1719970.1719976},
+ doi = {10.1145/1719970.1719976},
+ acmid = {1719976},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {news trend, personalization, user modeling},
+} 
+
+@inproceedings{Karatzoglou:2010uq, 
+  author = {Alexandros Karatzoglou and Alex Smola and Markus Weimer}, 
+  Booktitle = {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics}, 
+  Date-Added = {2010-05-26 13:25:59 -0700}, 
+  Date-Modified = {2011-10-09 17:30:31 +0000}, 
+  Editor = {Yee Whye Teh and Mike Titterington}, 
+  Keywords = {myown}, 
+  Pages = {389-396}, 
+  Title = {Collaborative Filtering on a Budget}, 
+  Url = {http://cs.markusweimer.com/2010/05/12/collaborative-filtering-on-a-budget/}, 
+  Volume = {9}, 
+  Year = {2010}, 
+  Bdsk-Url-1 = {http://jmlr.csail.mit.edu/proceedings/papers/v9/karatzoglou10a/karatzoglou10a.pdf} 
+}
+
+@article{Cacheda:2011:CCF:1921591.1921593,
+ author = {Cacheda, Fidel and Carneiro, V\'{\i}ctor and Fern\'{a}ndez, Diego and Formoso, Vreixo},
+ title = {Comparison of collaborative filtering algorithms: Limitations of current techniques and proposals for scalable, high-performance recommender systems},
+ journal = {ACM Trans. Web},
+ issue_date = {February 2011},
+ volume = {5},
+ number = {1},
+ month = feb,
+ year = {2011},
+ issn = {1559-1131},
+ pages = {2:1--2:33},
+ articleno = {2},
+ numpages = {33},
+ url = {http://doi.acm.org/10.1145/1921591.1921593},
+ doi = {10.1145/1921591.1921593},
+ acmid = {1921593},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Collaborative filtering, recommender systems},
+} 
+
+@article{Koren:2009:MFT:1608565.1608614,
+ author = {Koren, Yehuda and Bell, Robert and Volinsky, Chris},
+ title = {Matrix Factorization Techniques for Recommender Systems},
+ journal = {Computer},
+ issue_date = {August 2009},
+ volume = {42},
+ number = {8},
+ month = aug,
+ year = {2009},
+ issn = {0018-9162},
+ pages = {30--37},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/MC.2009.263},
+ doi = {10.1109/MC.2009.263},
+ acmid = {1608614},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+ keywords = {Computational intelligence, Computational intelligence, Netflix Prize, Matrix factorization, Matrix factorization, Netflix Prize},
+} 
+
+@article{Navarro:2001:GTA:375360.375365,
+ author = {Navarro, Gonzalo},
+ title = {A guided tour to approximate string matching},
+ journal = {ACM Comput. Surv.},
+ issue_date = {March 2001},
+ volume = {33},
+ number = {1},
+ month = mar,
+ year = {2001},
+ issn = {0360-0300},
+ pages = {31--88},
+ numpages = {58},
+ url = {http://doi.acm.org/10.1145/375360.375365},
+ doi = {10.1145/375360.375365},
+ acmid = {375365},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Levenshtein distance, edit distance, online string matching, text searching allowing errors},
+} 
+
+@MISC{Mihov04fastapproximate,
+    author = {Stoyan Mihov and Klaus U. Schulz},
+    title = {Fast Approximate Search in Large Dictionaries},
+    year = {2004}
+}
 
