final praesentation and removed - do not forget to remove this from tagger

--- a/schriftliche ausarbeitung/diplomarbeit.tex
+++ b/schriftliche ausarbeitung/diplomarbeit.tex
@@ -453,7 +453,7 @@ Thereby it compares user interactions with explicit ratings.
 The user interactions they measured with their web browser are presented below.
 
 \subsection{The time a user spends on a website}
-The team of \emph{Claypool et al} measured the time a user spends on a website as a first indicator that the user works with the site.
+The team of \citet{claypool2001} measured the time a user spends on a website as a first indicator that the user works with the site.
 The idea behind this method is that the more time the user takes to view the content of the website the more interesting the website is for him.
 For this method a timer was used that measured the time a user spends on a website.
 The timer starts after the website is completely loaded and stops when the user leaves the website or closes the window.
@@ -462,7 +462,7 @@ They compared the time a user spends on a website with the explicit rating from 
 So, they found out that the time a user spends on a website is a good indicator of interest.
 For this reason this method is used as one implicit rating indicator in this thesis.
 However one has to keep in mind, that the general time a website is open and visible needs to be relativized because one does not know whether the user is actually reading or interacting with the content of the current website.
-Therefore other indicators where measured and included in \emph{Claypool's} research.
+Therefore other indicators where measured and included in \citet{claypool2001} research.
 Which will be clarified in the following sections.
 
 \subsection{The time the cursor is in motion}
@@ -483,7 +483,7 @@ So, this method is not a good indicator for the users' interest.
 \subsection{The time a user scrolls}
 The last indicator they used was the time a user scrolls.
 This is an important activity indicator because a user has to scroll in order to be able to see the whole content of a website.
-The web browser the team of \emph{Claypool et al} developed measured the time a user scrolls a website by keys and by mouse.
+The web browser the team of \citet{claypool2001} developed measured the time a user scrolls a website by keys and by mouse.
 They compared the data of the method of the field experiment with over 80 people with the explicit user ratings.
 With that data they found out that both the measurement of user scrolls by keys and by mouse are on their own poor indicators of interest a combination of both methods is found to be a good indicator of interest.
 This is explainable by the fact that some users prefer to scroll by using the mouse while others prefer the keyboard for such a task.
@@ -973,7 +973,9 @@ The maximum distance for a given word $W \in \Sigma^*$ depends on the length n o
 %todo the word W is the plural form therefore it should be if n > 7 degree 3 is used otherwise 1
 A word with a length of $n\leq3$ in the \emph{Standard Thesaurus Economics} is usually an abbreviation and therefore is only used as a direct match.
 A word with a length of $n>3$ is used with a maximum distance of one due to the reason that most of the plural forms for short words involve the appending of a letter.
-A word with a length of $n>7$ is used with a maximum distance of three considering that composing the plural form of a word involves a maximum of three changes (substitution, insertion and deletion) in the German language. \todo{add source Die Pluralbildung im Deutschen: Eine Untersuchung an Hand der Optimalitätstheorie: "German Noun Plural reconsidered" von Dieter Wunderlich explain that there are 15 different plural forms \dots}
+A word with a length of $n\geq6$ is used with a maximum distance of three considering that composing the plural form of a word involves a maximum of three changes (substitution, insertion and deletion) in the German language. \todo{add source Die Pluralbildung im Deutschen: Eine Untersuchung an Hand der Optimalitätstheorie: "German Noun Plural reconsidered" von Dieter Wunderlich explain that there are 15 different plural forms \dots}
+%Maskulina und Neutra mit er-Plural 3 aenderungen Wurm Wuermer
+%substantive mit er plural beisplie Fass Faesser
 
 %optimization generate dfa directly or use table based evaluation method
 
