--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -225,3 +225,44 @@ booktitle = {Proceedings of Scala Days 2011}
     year = {2004}
 }
 
+@inproceedings{Joachims:2005:AIC:1076034.1076063,
+ author = {Joachims, Thorsten and Granka, Laura and Pan, Bing and Hembrooke, Helene and Gay, Geri},
+ title = {Accurately interpreting clickthrough data as implicit feedback},
+ booktitle = {Proceedings of the 28th annual international ACM SIGIR conference on Research and development in information retrieval},
+ series = {SIGIR '05},
+ year = {2005},
+ isbn = {1-59593-034-5},
+ location = {Salvador, Brazil},
+ pages = {154--161},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1076034.1076063},
+ doi = {10.1145/1076034.1076063},
+ acmid = {1076063},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {WWW search, clickthrough, eyetracking, implicit feedback},
+} 
+
+@MISC{germanStemming,
+  author = {Caumanns J\"org},
+  year = {1999},
+  title = {A Fast and Simple Stemming Algorithm for German Words},
+  address = {Center für Digitale Systeme, Freie Universität Berlin}
+}
+
+@book{englishLinguistics,
+ author={Kortmann, Bernd},
+ title={English linguistics - essentials},
+ edition={English ed., 1. Aufl., 5. Druck},
+ address={Berlin},
+ publisher={Cornelsen},
+ year={2006 [erschienen] 2011},
+ pages={312 S.},
+ isbn={978-3-464-31162-2},
+ series={Studium kompakt : Anglistik - Amerikanistik ; System use},
+ note={Nebensacht.: Linguistics - essentials},
+ language={eng},
+ keywords={(s)Anglistik / (s)Linguistik / (f)Lehrbuch ; (s)Amerikanistik / (s)Linguistik / (f)Lehrbuch},
+ library={UB [Signatur:LA-I 22-22167::(N)]},
+}
+
